# aegisops-agentic-portfolio

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  render.yaml  vercel.json
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260714_1435_0001_governance_data_layer.py  20260718_1315_0002_policy_knowledge_store.py
services/api/src/aegisops_api/: __init__.py  budget.py  config.py  demo_seed.py  logging.py  main.py
services/api/src/aegisops_api/audit/: __init__.py  writer.py
services/api/src/aegisops_api/connectors/: __init__.py  registry.py
services/api/src/aegisops_api/db/: __init__.py  models.py  session.py
services/api/src/aegisops_api/evals/: __init__.py  trace.py
services/api/src/aegisops_api/policy/: __init__.py  client.py
services/api/src/aegisops_api/tools/: __init__.py  (+3 more)
services/api/tests/: test_audit_writer.py  test_budget_enforcement.py  test_connector_registry.py  test_customer_support_escalation_graph.py  test_customer_support_escalation_runtime.py  test_database_schema.py  test_demo_seed.py  test_engineering_issue_to_pr_graph.py  test_engineering_issue_to_pr_planner.py  test_engineering_issue_to_pr_runtime.py  test_eval_rubrics.py  test_github_adapter.py  test_health.py  test_http_json_adapters.py  test_incident_response_investigator_graph.py  test_incident_response_investigator_runtime.py  test_policy_client.py  test_policy_fixtures.py  test_tool_call_execution.py  test_tool_execution.py  test_tool_registry.py  test_trace_evals.py  test_workflow_registry.py  test_workflow_runs.py
(+169 files in other folders)
