[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisops-api"
version = "0.1.0"
description = "API and agent runtime for the AegisOps agentic workflow portfolio."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5",
  "fastapi>=0.139.0",
  "httpx>=0.28.1",
  "jsonschema>=4.26.0",
  "langchain-openai>=1.3.5",
  "langfuse>=4.14.0",
  "langgraph>=1.2.9",
  "langgraph-checkpoint-postgres>=3.1.0",
  "langsmith>=0.10.3",
  "mcp>=1.28.1",
  "openai>=2.45.0",
  "openai-agents>=0.18.2",
  "opentelemetry-api>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-exporter-otlp>=1.39.1",
  "pgvector>=0.4.1",
  "psycopg[binary,pool]>=3.3.2",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.13.0",
  "pyyaml>=6.0.3",
  "python-dotenv>=1.2.1",
  "redis>=7.1.0",
  "sqlalchemy>=2.0.51",
  "structlog>=25.5.0",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.51.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.9",
  "types-jsonschema>=4.25.1.20251107",
  "types-PyYAML>=6.0.12.20250915"
]
evals = [
  "ragas>=0.4.3"
]
observability = [
  "arize-phoenix>=18.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
